@@ -7,6 +7,13 @@ Sources
 
 Releases
 {
+  v8r8-pre3
+  {
+    Modules = LHCbDIRAC:v8r8-pre3, LHCbWebDIRAC:v4r3p2
+    Depends = DIRAC:v6r17p20
+    LcgVer = 2017-01-27
+  }
+
   v8r8-pre2
   {
     Modules = LHCbDIRAC:v8r8-pre2, LHCbWebDIRAC:v4r3p2
